<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfilePage"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:background="@color/grey">

        <TextView
            android:id="@+id/account_details_name_in_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="40dp">
        </TextView>

        <ImageButton
            android:id="@+id/previous_page_profile_page"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/ic_previous_page"
            android:layout_alignParentStart="true"
            android:visibility="visible"
            android:contentDescription="@string/previous_page">
        </ImageButton>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="140dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_log_out"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="140dp">
        </TextView>

        <Button
            android:id="@+id/log_out_button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            app:backgroundTint="@color/red"
            android:layout_gravity="center"
            android:text="@string/log_out"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="60dp">
        </Button>

    </LinearLayout>

</RelativeLayout>