<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignIn"
    android:background="@color/white">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:layout_marginTop="230dp"
            android:gravity="center"
            android:textSize="30sp">
        </TextView>

        <EditText
            android:id="@+id/sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:hint="@string/username_3_dots"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:textSize="20sp">
        </EditText>

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:hint="@string/password_3_dots"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:textSize="20sp">
        </EditText>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:backgroundTint="@color/red">
        </Button>

    </LinearLayout>
</RelativeLayout>